--- a/em/skin/theme_resources/stylesheets/video.css
+++ b/em/skin/theme_resources/stylesheets/video.css
@@ -48,6 +48,20 @@ ul.video-list li.video-item h5 {
   width: 40%;
 }
 
+ /* Description */
+
+p.documentDescription {
+	margin: 0;
+}
+
+ a.more {
+ 	display: block;
+ 	font-weight: bold;
+ 	color: #445;
+ 	margin: 0 0 1em 0;
+ 	text-align: center;
+ }
+
 /* Video Info */
 
 div#video-info {
