--- a/em/skin/theme_resources/stylesheets/foundation.css
+++ b/em/skin/theme_resources/stylesheets/foundation.css
@@ -772,17 +772,20 @@ div.column.centered.load-more {
 
 }
 
+/* This actually appears *OVER* the videos! */
+
 .video div.proxy-under {
-  height: 34px;
+  height: 50px;
 }
-.video div.wrapper-under {
+.video div.wrapper-under, .video div.wrapper-image {
   position: relative;
 }
 
 .video div.under {
   overflow: visible;
   position: absolute;
-  bottom: 0px;
+  min-height: 50px;
+  top: 0px;
   left: 0px;
   width: 100%;
   color: #fff;
@@ -798,16 +801,16 @@ div.column.centered.load-more {
   background-image: -webkit-gradient(linear,left top,left bottom,color-stop(0,#444446),color-stop(100%,#343436));
   background-image: -webkit-linear-gradient(top,#444446 0,#343436 100%);
   background-image: linear-gradient(to bottom,#444446 0,#343436 100%);
-  -moz-border-radius-bottomright: 3px;
-  -webkit-border-bottom-right-radius: 3px;
-  -o-border-bottom-right-radius: 3px;
-  -ms-border-bottom-right-radius: 3px;
-  border-bottom-right-radius: 3px;
-  -moz-border-radius-bottomleft: 3px;
-  -webkit-border-bottom-left-radius: 3px;
-  -o-border-bottom-left-radius: 3px;
-  -ms-border-bottom-left-radius: 3px;
-  border-bottom-left-radius: 3px;
+  -moz-border-radius-topright: 3px;
+  -webkit-border-top-right-radius: 3px;
+  -o-border-top-right-radius: 3px;
+  -ms-border-top-right-radius: 3px;
+  border-top-right-radius: 3px;
+  -moz-border-radius-topleft: 3px;
+  -webkit-border-top-left-radius: 3px;
+  -o-border-top-left-radius: 3px;
+  -ms-border-top-left-radius: 3px;
+  border-top-left-radius: 3px;
   -moz-box-shadow: 0 2px 4px rgba(0,0,0,0.18);
   -ms-box-shadow: 0 2px 4px rgba(0,0,0,0.18);
   -webkit-box-shadow: 0 2px 4px rgba(0,0,0,0.18);
@@ -828,22 +831,22 @@ div.column.centered.load-more {
   font-size: 13px;
 }
 
-.video div.under span.duration {
+.video span.duration {
   display: block;
   float: right;
   background-color: rgba(0,0,0,0.7);
   padding: 2px 3px;
   color: #dfdfe1;
   position: absolute;
-  right: 2px;
-  top: -22px;
+  right: 10px;
+  bottom: 2px;
   -moz-border-radius: 3px;
   -webkit-border-radius: 3px;
   border-radius: 3px;
   font-size: 12px;
 }
 
-div.video:hover div.under span.duration {
+div.video:hover span.duration {
   display: none;
 }
 
@@ -878,7 +881,6 @@ div.video:hover div.under span.duration {
 
 .video.featured {
   position: relative;
-  overflow: auto;
   margin-bottom: 0;
   border-bottom: 2px solid #222224;
   -moz-border-radius-topleft: 2px;
@@ -900,6 +902,7 @@ div.video:hover div.under span.duration {
   -ms-box-shadow: 0 2px 5px rgba(0,0,0,0.22);
   -webkit-box-shadow: 0 2px 5px rgba(0,0,0,0.22);
   box-shadow: 0 2px 5px rgba(0,0,0,0.22);
+  left: 187px;
 }
 
 .video.featured div.viewport {
@@ -920,10 +923,10 @@ div.video:hover div.under span.duration {
   background-image: -webkit-gradient(linear,left top,left bottom,color-stop(0,#444446),color-stop(100%,#39393b));
   background-image: -webkit-linear-gradient(top,#444446 0,#39393b 100%);
   background-image: linear-gradient(to bottom,#444446 0,#39393b 100%);
-  width: 34%;
-  height: 100%;
+  width: 186px;
+  height: 331px;
   position: absolute;
-  left: 0;
+  left: -186px;
   top: 0;
 }
 
@@ -956,13 +959,12 @@ div.video div.rollover {
   display: none;
   position: absolute;
   top: 0;
-  left: 8px;
-  margin-right: 8px;
+  left: 0;
   bottom: 0px;
   padding: 8px;
   overflow: hidden;
-  background: #efeff1;
-  opacity: 0.75;
+  background: #f5f5f7;
+  opacity: 0.82;
 }
 
 div.video div.rollover, div.video div.rollover p {
@@ -1434,7 +1436,147 @@ div.row form {
   -webkit-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.17);
 }
 
-/* ----------------------------------------- Page Name 2
+#content #content-core div.row ul.formTabs {
+  display: block;
+  overflow: auto;
+  border: none;
+  -moz-box-shadow: 0 1px 4px rgba(0,0,0,0.17);
+  -ms-box-shadow: 0 1px 4px rgba(0,0,0,0.17);
+  -webkit-box-shadow: 0 1px 4px rgba(0,0,0,0.17);
+  box-shadow: 0 1px 4px rgba(0,0,0,0.17);
+  background: #efeff2;
+  background: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #efeff2), color-stop(100%, #e5e5e7));
+  background: -webkit-linear-gradient(#efeff2, #e5e5e7);
+  background: -ms-linear-gradient(#efeff2, #e5e5e7);
+  background: -moz-linear-gradient(#efeff2, #e5e5e7);
+  background: -o-linear-gradient(#efeff2, #e5e5e7);
+  background: linear-gradient(#efeff2, #e5e5e7);
+  border-bottom: 1px solid #bfbfbf;
+  -moz-border-radius: 0;
+  -webkit-border-radius: 0;
+  border-radius: 0;
+}
+
+#content #content-core div.row ul.formTabs li.formTab {
+  display: block;
+  float: left;
+  margin: 0;
+  padding: 0;
+  border-right: 1px solid #bbb;
+}
+
+#content #content-core div.row ul.formTabs li.formTab a.selected, #content #content-core div.row ul.formTabs li.formTab a:active {
+  background: #333;
+  background: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #333), color-stop(100%, #5f5f5f));
+  background: -webkit-linear-gradient(#333, #5f5f5f);
+  background: -ms-linear-gradient(#333, #5f5f5f);
+  background: -moz-linear-gradient(#333, #5f5f5f);
+  background: -o-linear-gradient(#333, #5f5f5f);
+  background: linear-gradient(#333, #5f5f5f);  
+  color: #efeff1 !important;
+}
+
+#content #content-core div.row ul.formTabs li.formTab a:link:hover {
+  color: #000;
+}
+
+#content #content-core div.row ul.formTabs li.formTab a {
+  padding: 4px 14px;
+  font-weight: bold;
+  font-size: 14px;
+  -moz-border-radius: 0;
+  -webkit-border-radius: 0;
+  border-radius: 0;
+}
+
+/* Inputs */
+
+fieldset#fieldset-default.formPanel input[type="text"],
+fieldset#fieldset-default.formPanel textarea,
+fieldset#fieldset-0.formPanel input[type="text"],
+fieldset#fieldset-0.formPanel textarea {
+  padding: 0.5em;
+  background: #f8f8fa;
+  font-size: 18px;
+  border: 1px solid #bbb;
+  -moz-border-radius: 3px;
+  -webkit-border-radius: 3px;
+  border-radius: 3px;
+}
+
+fieldset#fieldset-default.formPanel input.date-widget[type="text"] {
+  font-size: 12px;
+  padding: 0.2em 0.5em;
+}
+
+div.formControls {
+  overflow:auto;
+}
+
+div.formControls input[type="submit"] {
+  float: left;
+  display: block;
+  padding: 4px 5px;
+  margin: 10px 10px 10px 0;
+  color: #222;
+  text-shadow: 0 1px 0 white;
+  -moz-box-shadow: inset 0 0 1px white;
+  -ms-box-shadow: inset 0 0 1px white;
+  -webkit-box-shadow: inset 0 0 1px white;
+  box-shadow: inset 0 0 1px white;
+  filter: progid:DXImageTransform.Microsoft.Gradient(GradientType=0,StartColorStr=snowfa,EndColorStr=#FFDCDCdc);
+  background: #efeff2;
+  background: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #efeff2), color-stop(100%, #dfdfe2));
+  background: -webkit-linear-gradient(#efeff2, #dfdfe2);
+  background: -ms-linear-gradient(#efeff2, #dfdfe2);
+  background: -moz-linear-gradient(#efeff2, #dfdfe2);
+  background: -o-linear-gradient(#efeff2, #dfdfe2);
+  background: linear-gradient(#efeff2, #dfdfe2);
+  border: 1px solid #aaa;
+  outline: 0;
+  text-align: center;
+  font-weight: bold;
+  font-size: 12px;
+  white-space: nowrap;
+  word-wrap: normal;
+  cursor: pointer;
+  -moz-border-radius: 3px;
+  -webkit-border-radius: 3px;
+  border-radius: 3px;
+  -moz-box-shadow: 0 1px 5px rgba(0,0,0,0.1);
+  -ms-box-shadow: 0 1px 5px rgba(0,0,0,0.1);
+  -webkit-box-shadow: 0 1px 5px rgba(0,0,0,0.1);
+  box-shadow: 0 1px 5px rgba(0,0,0,0.1);
+}
+
+div.formControls input[type="submit"]:hover {
+  color: #000;
+  border: 1px solid #666;
+  -moz-box-shadow: 0 2px 7px rgba(0,0,0,0.2);
+  -ms-box-shadow: 0 2px 7px rgba(0,0,0,0.2);
+  -webkit-box-shadow: 0 2px 7px rgba(0,0,0,0.2);
+  box-shadow: 0 2px 7px rgba(0,0,0,0.2);
+}
+
+div.formControls input[type="submit"]:active {
+  color: #000;
+  border: 1px solid #444;
+  -moz-box-shadow: none;
+  -ms-box-shadow: none;
+  -webkit-box-shadow: none;
+  box-shadow: none;
+  text-shadow: none;
+  color: #efeff1;
+  background: #555;
+  background: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #555), color-stop(100%, #777));
+  background: -webkit-linear-gradient(#555, #777);
+  background: -ms-linear-gradient(#555, #777);
+  background: -moz-linear-gradient(#555, #777);
+  background: -o-linear-gradient(#555, #777);
+  background: linear-gradient(#555, #777);
+}
+
+/* ----------------------------------------- Misc Rules
 ----------------------------------------- */
 
 #portal-advanced-search, #portal-searchbox label, 
@@ -1477,3 +1619,4 @@ div#share-box {
 div.LSBox {
     margin-top: -10px;
 }
+
