--- a/em/skin/theme_resources/stylesheets/video.css
+++ b/em/skin/theme_resources/stylesheets/video.css
@@ -62,6 +62,11 @@ a.more, a.less {
  	text-align: center;
  }
 
+ div#full-description {
+ 	background: #dfdfe1;
+ 	padding: 1em;
+ }
+
 /* Video Info */
 
 div#video-info {
