fix calwidget & display Collections in project slot

--- a/em/skin/theme_resources/stylesheets/foundation.css
+++ b/em/skin/theme_resources/stylesheets/foundation.css
@@ -1776,3 +1776,14 @@ body.template-featured_videos_homepage ul#dl-links {
     width: 100%;
 }
 
+.video .wrapper-under {
+  width: 215px;
+}
+
+#calroot {
+  width: 207px !important;
+}
+
+#caldays {
+  height: 22px !important;
+}
