fix previous commit

--- a/em/skin/theme_resources/stylesheets/foundation.css
+++ b/em/skin/theme_resources/stylesheets/foundation.css
@@ -1776,8 +1776,8 @@ body.template-featured_videos_homepage ul#dl-links {
     width: 100%;
 }
 
-.video .wrapper-under {
-  width: 226px;
+.featured-filmmaker video .video .wrapper-under {
+  width: 215px;
 }
 
 #calroot {
